# mypoke_tgc_sync

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  migrate_to_sqlite.py  models.py  pyproject.toml  requirements.txt  run_initial_sync.py  sync.py  sync_job.py
docs/ai/: ADR.md  AI.md  ARCH.md  README-AI.md  STANDARDS.md  VISION.md
src/mypoke_sync/: export.py  main.py  models.py  pokeapi_client.py  sync.py  validator.py
src/mypoke_sync/utils/: phash.py  retry.py
tests/: test_sync.py
utils/: phash.py
